--- a/BeamerTemplateNMTRIL_Combined.tex
+++ b/BeamerTemplateNMTRIL_Combined.tex
@@ -11,7 +11,7 @@
 %% If you don't want a logo on the title page, leave the area between the curly braces blank
 \titlegraphic{\includegraphics[width=0.375\textwidth]{/Users/photojaguar/Documents/Templates/Logos/NMT_RIL_Logo.pdf}}
 
-\usetheme[subsection = false]{NMTRIL2}
+\usetheme[subsection = false]{NMTRIL}
 
 %% If you don't want a motto, leave the area between the curly braces blank
 \motto{\color{RILred}\textrm{\emph{``Add a cool motto or quote or whatever'' -- DCP}}}
