--- a/separated_styles/beamerinnerthemeNMTRIL.sty
+++ b/separated_styles/beamerinnerthemeNMTRIL.sty
@@ -1,5 +1,11 @@
 \mode<presentation>
 
+%%% Requirement %%%
+\RequirePackage{tikz, textpos}
+
+\definecolor{NMTblue}{RGB}{31,59,102}
+\definecolor{RILred}{RGB}{129,50,54}
+
 \setbeamertemplate{background}{
   \begin{tikzpicture}
   \useasboundingbox (0,0) rectangle(\the\paperwidth,\the\paperheight);
