--- a/separated_styles/beamerouterthemeNMTRIL.sty
+++ b/separated_styles/beamerouterthemeNMTRIL.sty
@@ -1,3 +1,9 @@
+%%% Requirement %%%
+\RequirePackage{tikz, textpos}
+
+\definecolor{NMTblue}{RGB}{31,59,102}
+\definecolor{RILred}{RGB}{129,50,54}
+
 \setbeamercolor{section in head/foot}{parent=palette tertiary}
 \setbeamercolor{subsection in head/foot}{parent=palette secondary}
 \setbeamercolor{author in head/foot}{parent=subsection in head/foot}
@@ -60,5 +66,6 @@
 \setbeamertemplate{itemize items}{$\bullet$}
 \setbeamertemplate{blocks}[rounded][shadow = false]
 \setbeamertemplate{caption}[numbered]
+\setbeamertemplate{navigation symbols}{}
 
 \mode<all>
