--- a/BeamerTemplateNMTRIL.tex
+++ b/BeamerTemplateNMTRIL.tex
@@ -11,7 +11,9 @@
 %% If you don't want a logo on the title page, leave the area between the curly braces blank
 \titlegraphic{\includegraphics[width=0.375\textwidth]{/Users/photojaguar/Documents/Templates/Logos/NMT_RIL_Logo.pdf}}
 
-\usetheme{NMTRIL}
+\useinnertheme{NMTRIL}
+\useoutertheme[subsection = false]{NMTRIL}
+\usecolortheme{NMTRIL}
 
 %% If you don't want a motto, leave the area between the curly braces blank
 \motto{\color{RILred}\textrm{\emph{``Add a cool motto or quote or whatever'' -- DCP}}}
