--- a/separated_styles/beamercolorthemeNMTRIL.sty
+++ b/separated_styles/beamercolorthemeNMTRIL.sty
@@ -1,5 +1,11 @@
 \mode<presentation>
 
+%%% Requirement %%%
+\RequirePackage{tikz, textpos}
+
+\definecolor{NMTblue}{RGB}{31,59,102}
+\definecolor{RILred}{RGB}{129,50,54}
+
 %%% Title Colors %%%
 \setbeamercolor{title page header}{fg = lightgray}
 \setbeamercolor{author}{fg = black}
