Added the color specification of the motto to the template file.

--- a/combined_style/beamerthemeNMTRIL.sty
+++ b/combined_style/beamerthemeNMTRIL.sty
@@ -85,7 +85,7 @@
 	\end{textblock*}
 	\begin{textblock*}{12.8cm}(-1cm, 0.25cm)
 		\begin{beamercolorbox}[center]{title page header}
-			\insertmotto%
+			{\color{RILred}\insertmotto}%
 		\end{beamercolorbox}%
 	\end{textblock*}
 	\begin{textblock*}{12cm}(-1cm, 0cm)
