Started to add a template for note pages, but have not figured out the proper syntax yet. Also added an ignore file.

--- a/BeamerTemplateNMTRIL_Combined.tex
+++ b/BeamerTemplateNMTRIL_Combined.tex
@@ -1,25 +1,40 @@
 \documentclass[compress, xcolor = svgnames, t]{beamer}
-\usepackage{lmodern, beamermotto, columnshort}
+\usepackage{
+	beameradvisor,
+	beamermotto,
+	beamertitleimage,
+	columnshort,
+	graphicx,
+	lmodern,
+	pgfpages
+}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
 \title{NMT RIL Beamer Template}
 \subtitle{Beamer template for the mechanical engineering robotics lab}
 \author[DP]{David Patterson \texttt{dpatterson.nmt@gmail.com}}
+\advisor{}
 \institute[NMT]{New Mexico Institute of Technology}
 \date{\today}
 %% If you don't want a logo on the title page, leave the area between the curly braces blank
-\titlegraphic{\includegraphics[width=0.375\textwidth]{/Users/photojaguar/Documents/Templates/Logos/NMT_RIL_Logo.pdf}}
+% \titlegraphic{\includegraphics[width=0.375\textwidth]{/Users/photojaguar/Documents/Templates/Logos/NMT_RIL_Logo.pdf}}
+
+\graphicspath{{/Users/photojaguar/Documents/GitHub/Thesis/Complete_Thesis/}}
+% \graphicspath{{/Users/dcpatte/Documents/GitHub/Thesis/Complete_Thesis/}}
+\titleimage{}
 
 \usetheme[subsection = false]{NMTRIL}
 
 %% If you don't want a motto, leave the area between the curly braces blank
-\motto{\color{RILred}\textrm{\emph{``Add a cool motto or quote or whatever'' -- DCP}}}
+\motto{} % \motto{\textrm{\emph{``Add a cool motto or quote or whatever'' -- DCP}}}
 
 \begin{document}
 
 \begin{frame}[c]
-\titlepage
+
+	\titlepage
+
 \end{frame}
 
 \begin{frame}\frametitle{Outline}
@@ -36,10 +51,12 @@
 \subsection{Theorem} %
 \label{sub:theorem}
 
-\begin{frame}\frametitle{Theorem}\framesubtitle{Shown is a theorem block} 
-\begin{theorem}
-Theorem goes here
-\end{theorem}
+\begin{frame}\frametitle{Theorem}
+	\framesubtitle{Shown is a theorem block}
+
+	\begin{theorem}
+		Theorem goes here
+	\end{theorem}
 \end{frame}
 
 % subsection theorem (end)
