--- a/combined_style/beamerthemeNMTRIL.sty
+++ b/combined_style/beamerthemeNMTRIL.sty
@@ -184,4 +184,57 @@
 \setbeamertemplate{blocks}[rounded][shadow = false]
 \setbeamertemplate{caption}[numbered]
 
+%%% Notes %%%
+
+%\setbeamertemplate{note page}
+%{%
+%	{%
+%		\scriptsize
+%		\usebeamerfont{note title}\usebeamercolor[fg]{note title}%
+%		\ifbeamercolorempty[bg]{note title}{}{%
+%			\insertvrule{.25\paperheight}{note title.bg}%
+%			\vskip-.25\paperheight%
+%			\nointerlineskip%
+%		}%
+%		\vbox{
+%			\hfill\insertslideintonotes{0.25}\hskip-\Gm@rmargin\hskip0pt%
+%			\vskip-0.25\paperheight%
+%			\nointerlineskip
+%			\begin{pgfpicture}{0cm}{0cm}{0cm}{0cm}
+%				\begin{pgflowlevelscope}{\pgftransformrotate{90}}
+%					{\pgftransformshift{\pgfpoint{-2cm}{0.2cm}}%
+%					\pgftext[base,left]{\usebeamerfont{note date}\usebeamercolor[fg]{note date}\the\year-\ifnum\month<10\relax0\fi\the\month-\ifnum\day<10\relax0\fi\the\day}}
+%				\end{pgflowlevelscope}
+%			\end{pgfpicture}}
+%		\nointerlineskip
+%		\vbox to .25\paperheight{\vskip0.5em
+%			\hbox{\insertshorttitle[width=8cm]}%
+%			\setbox\beamer@tempbox=\hbox{\insertsection}%
+%			\hbox{\ifdim\wd\beamer@tempbox>1pt{\hskip4pt\raise3pt\hbox{\vrule
+%				width0.4pt height7pt\vrule width 9pt
+%				height0.4pt}}\hskip1pt\hbox{\begin{minipage}[t]{7.5cm}\def\breakhere{}\insertsection\end{minipage}}\fi%
+%			}%
+%			\setbox\beamer@tempbox=\hbox{\insertsubsection}%
+%			\hbox{\ifdim\wd\beamer@tempbox>1pt{\hskip17.4pt\raise3pt\hbox{\vrule
+%				width0.4pt height7pt\vrule width 9pt
+%				height0.4pt}}\hskip1pt\hbox{\begin{minipage}[t]{7.5cm}\def\breakhere{}\insertsubsection\end{minipage}}\fi%
+%			}%
+%			\setbox\beamer@tempbox=\hbox{\insertshortframetitle}%
+%			\hbox{\ifdim\wd\beamer@tempbox>1pt{\hskip30.8pt\raise3pt\hbox{\vrule
+%				width0.4pt height7pt\vrule width 9pt
+%				height0.4pt}}\hskip1pt\hbox{\insertshortframetitle[width=7cm]}\fi%
+%			}%
+%		\vfil}%
+%	}%
+%	\ifbeamercolorempty[bg]{note page}{}{%
+%		\nointerlineskip%
+%		\insertvrule{.75\paperheight}{note page.bg}%
+%		\vskip-.75\paperheight%
+%	}%
+%	\vskip.25em
+%	\nointerlineskip
+%	\insertnote
+%}
+
+
 \mode<all>
